--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "design.shapeshifter.nestedscrolling"
+        applicationId "alexjlockwood.nestedscrolling"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
