--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="design.shapeshifter.nestedscrolling">
+  package="alexjlockwood.nestedscrolling">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +11,7 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
 
-    <activity android:name="design.shapeshifter.nestedscrolling.MainActivity">
+    <activity android:name="alexjlockwood.nestedscrolling.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
